--- a/build.xml
+++ b/build.xml
@@ -32,8 +32,7 @@
 
         <sequential>
             <mkdir dir="@{classdir}"/>
-            <javac srcdir="@{srcdir}" classpathref="@{classpathref}" destdir="@{classdir}" debug="true" source="1.5"
-                   target="1.5" fork="true"/>
+            <javac srcdir="@{srcdir}" classpathref="@{classpathref}" destdir="@{classdir}" debug="true" source="1.5" target="1.5" fork="true"/>
             <copy todir="@{classdir}">
                 <fileset dir="@{srcdir}" excludes="**/*.java"/>
             </copy>
@@ -50,8 +49,7 @@
                 <pathelement location="build/jars/${artifact}.jar"/>
             </path>
 
-            <compile-jar srcdir="src/main" jarfile="${artifact}.jar"
-                         classpathref="@{classpathref}"/>
+            <compile-jar srcdir="src/main" jarfile="${artifact}.jar" classpathref="@{classpathref}"/>
             <compile-jar srcdir="src/test" jarfile="${ant.project.name}-test-${version}.jar"
                          classpathref="test-classpath"/>
         </sequential>
