--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
     <target name="build" depends="clean, test, document, package"/>
 
     <target name="package">
-        <zip destfile="build/${artifact}-jars.zip" update="true">
+        <zip destfile="build/${artifact}.zip" update="true">
             <zipfileset dir="lib" prefix="lib"/>
             <zipfileset file="build/jars/${artifact}.jar"/>
             <zipfileset dir="build/doc" prefix="doc"/>
